	* il_dds.c/il_dds.h: Changed CompFormat to a local variable.  Renamed Decompress to DdsDecompress.
	* ChangeLog (this file): Changed order to newest at the top.
	* il.h: Added IL_FITS and IL_IWI defines.
	* config.h.win: Added IL_FITS, IL_IWI, IL_SUN and IL_TPL.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_fits.c and il_iwi.c to source line.

--- 1.7.7 release ---

2009-02-06 Matěj Týč <bubla@sf.net>
	* configure.ac, lib/Makefile.am: Added explicit linking with libm
	library + fixed the ilut_x11.c file conditions of compilation
	* examples/Makefile.am + IL examples, test/Makefile.am + testil: Added
	conditional compilation option when compiling only with IL (without
	ILU, iluErrorString() absence workaround)

2009-02-06 Denton Woods <doomwiz@users.sf.net>
	* README.win and README.unix: Updated with Cygwin/MinGW instructions.

2009-02-05 Denton Woods <doomwiz@users.sf.net>
	* il_tga.c: Fixed bug loading malformed RLE Targa images.
	* il_rle.c:20: Changed size_t cast to ILint to resolve compiler warning.
	* il.def: Added definitions.
	* Updated version numbers to 1.7.7 everywhere.

2009-02-04 Denton Woods <doomwiz@users.sf.net>
	* ilut_opengl.c:160: Changed checks to see if less than 0.
	* il_fits.c: Got this reading FITS files properly.

2009-02-04 Matěj Týč <bubla@sf.net>
	* configure.ac: Corrected handling of --enable-debug options, added
	working install support for pkg-config
	* data/Makefile.am, *.pc.in: Corrected pkg-config files

2009-02-03 Denton Woods <doomwiz@users.sf.net>
	* il_io.c: Updated Doxygen comments.
	* il_fits.c: Added this file (not in any projects yet).
	* il_fits.c: Wrote beginning of FITS loading code.

2009-02-02 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c (ilCopyPixels):311: Added check for destination format of color index.
	* il_convbuff.c (ilConvertBuffer): Changed to accept the source image palette.  Added code to
	  convert from buffers that are related to a palette before the large switch.